feat: add rerun cluster methods to insert/update, get latest created and get rerun cluster by fileId
