# ds-storage/src/main/openapi/ds-storage-openapi_v1.yaml
@@ -519,11 +519,19 @@ paths:
     post:
       tags:
         - 'RerunCluster'
-      summary: 'Rerun new rows from remote p3rerun database in table clusters table, save it to our rerun_clusters table, update mtime in ds_records table and return number of rows inserted or updated in rerun_clusters table'
+      summary: 'Save list of RerunCluster in rerun_clusters table, update mtime in ds_records table and return number of rows inserted or updated in rerun_clusters table'
+      operationId: updateRerunClusters
       security:
         - KBOAuth:
             - any
-      operationId: updateRerunClustersTable
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: '#/components/schemas/RerunCluster'
       responses:
         '201':
           description: 'Return the number of rows inserted or updated in rerun_clusters table'
@@ -818,7 +826,7 @@ components:
         created:
           type: string
           format: date-time
-          description: 'When was this identified as a rerun by AI team?'
+          description: 'When was this identified as a rerun?'
         jobId:
           type: string
           description: 'Unique UUID of what job created this rerun cluster.'
@@ -829,7 +837,7 @@ components:
         updated:
           type: string
           format: date-time
-          description: 'When was this row updated in rerun_clusters table'
+          description: 'When was this row updated in rerun_clusters table?'
 
     DsRecordList:
       type: array
